# cpm

./: .gitignore  Makefile.in  README  README.md  config.h  config.h.in  configuration.c  configuration.h  configure  configure.in  control.in  cpm.c  cpm.h  cpm_0.29.orig.tar.gz.delta  cpm_0.29.orig.tar.gz.id  cpm_0.30.orig.tar.xz.delta  cpm_0.30.orig.tar.xz.id  cpm_0.31.orig.tar.xz.delta  cpm_0.31.orig.tar.xz.id  cpm_0.32.orig.tar.xz.delta  cpm_0.32.orig.tar.xz.id  general.c  general.h  gpg.c  gpg.h  interface_cli.c  interface_cli.h  interface_gui.c  interface_gui.h  interface_keys.c  interface_keys.h  interface_utf8.c  interface_utf8.h  interface_xml.c  interface_xml.h  listhandler.c  listhandler.h  memory.c  memory.h  options.c  (+13 more)
anonymize/: cpm2anonymous.pl
conf/: cpmrc-default
debian/: README.debian  changelog  control  copyright  cpm.dirs  cpm.docs  cpm.install  dirs  docs  gbp.conf  manpages  postinst  postrm  rules  watch
debian/.svn/: entries
debian/.svn/text-base/: README.Debian.svn-base  changelog.svn-base  control.svn-base  copyright.svn-base  cron.d.ex.svn-base  init.d.ex.svn-base  init.d.lsb.ex.svn-base  manpage.1.ex.svn-base  manpage.sgml.ex.svn-base  manpage.xml.ex.svn-base  menu.ex.svn-base  postinst.ex.svn-base  postrm.ex.svn-base  preinst.ex.svn-base  prerm.ex.svn-base  rules.svn-base  watch.ex.svn-base
debian/patches/: 00list  01_Makefile.in.patch
debian/upstream/: metadata
docs/: ChangeLog  README  changelog  cpm.pod  cpm.txt  create-cpmdb.txt  multiuser
po/: de_DE.mo  de_DE.po
redhat/: cpm.spec
share/cpm/: convert2cpm.sh  cpmdb.dtd  create-cpmdb  csv2cpm.pl  import.sh
share/cpm/general/: README  convert.sh  example.txt
share/cpm/passwordsafe/: README  convert.pl  example.txt
share/cpm/pms/: README  convert.pl  convert.sh
tests/: alphabet-ascii.txt  backup-result.txt  clisearch-1-3-result.txt  clisearch-1-6-result.txt  clisearch-2-1-result.txt  clisearch-2-2-result.txt  clisearch-2-4-result.txt  clisearch-2-5-result.txt  clisearch-3-1-result.txt  clisearch-3-2-result.txt  clisearch-3-3-result.txt  clisearch-3-4-result.txt  clisearch-3-5-result.txt  clisearch-3-6-result.txt  clisearchdb  compress1-result.txt  compress2-result.txt  compress3-result.txt  compress4-result.txt  compress5-result.txt  compress6-result.txt  configtest1-result.txt  configtest2-result.txt  cpmrc-broken  cpmrc-clisearch-tests  cpmrc-crypt-tests  cpmrc-pattern-tests  cryptdb  decrypt-result.txt  encrypt-result.txt  encrypt-result.txt.in  environment-result.txt  garbagedb1  garbagedb2  garbagedb2-result.txt  garbagedb3  garbagedb3-result.txt  garbagedb4  garbagedb4-result.txt  garbagedb5  (+15 more)
wrapper/: cpm-wrapper
